@@ -87,7 +87,7 @@ public class PrincipalBasedAuthorizationConfigurationTest extends AbstractPrinci
 
     @Test
     public void testGetValidators() {
-        List<? extends ValidatorProvider> l = new PrincipalBasedAuthorizationConfiguration().getValidators("wspName", ImmutableSet.of(), new MoveTracker());
+        List<? extends ValidatorProvider> l = new PrincipalBasedAuthorizationConfiguration().getValidators("wspName", Set.of(), new MoveTracker());
         assertEquals(1, l.size());
         assertTrue(l.get(0) instanceof PrincipalPolicyValidatorProvider);
     }
@@ -144,11 +144,11 @@ public class PrincipalBasedAuthorizationConfigurationTest extends AbstractPrinci
         pbac.setSecurityProvider(securityProvider);
         pbac.setRootProvider(getRootProvider());
 
-        Set<Principal> principals = ImmutableSet.of(EveryonePrincipal.getInstance(), getTestUser().getPrincipal());
+        Set<Principal> principals = Set.of(EveryonePrincipal.getInstance(), getTestUser().getPrincipal());
         PermissionProvider pp = pbac.getPermissionProvider(root, "wspName", principals);
         assertSame(EmptyPermissionProvider.getInstance(), pp);
 
-        principals = ImmutableSet.of(getTestSystemUser().getPrincipal());
+        principals = Set.of(getTestSystemUser().getPrincipal());
         pp = pbac.getPermissionProvider(root, "wspName", principals);
         assertSame(EmptyPermissionProvider.getInstance(), pp);
     }
@@ -165,7 +165,7 @@ public class PrincipalBasedAuthorizationConfigurationTest extends AbstractPrinci
         pbac.setSecurityProvider(getSecurityProvider());
         pbac.setRootProvider(getRootProvider());
 
-        Set<Principal> principals = ImmutableSet.of(getTestUser().getPrincipal());
+        Set<Principal> principals = Set.of(getTestUser().getPrincipal());
         PermissionProvider pp = pbac.getPermissionProvider(root, "wspName", principals);
         assertTrue(pp instanceof PrincipalBasedPermissionProvider);
     }
@@ -177,7 +177,7 @@ public class PrincipalBasedAuthorizationConfigurationTest extends AbstractPrinci
         pbac.setSecurityProvider(getSecurityProvider());
         pbac.setRootProvider(getRootProvider());
 
-        Set<Principal> principals = ImmutableSet.of(getTestSystemUser().getPrincipal());
+        Set<Principal> principals = Set.of(getTestSystemUser().getPrincipal());
         PermissionProvider pp = pbac.getPermissionProvider(root, "wspName", principals);
         assertTrue(pp instanceof PrincipalBasedPermissionProvider);
     }
