@@ -41,9 +41,9 @@ public interface PermissionConstants {
     String REP_PRIVILEGE_BITS = "rep:privileges";
     String REP_NUM_PERMISSIONS = "rep:numPermissions";
 
-    Set<String> PERMISSION_NODETYPE_NAMES = ImmutableSet.of(NT_REP_PERMISSIONS, NT_REP_PERMISSION_STORE);
-    Set<String> PERMISSION_NODE_NAMES = ImmutableSet.of(REP_PERMISSION_STORE);
-    Set<String> PERMISSION_PROPERTY_NAMES = ImmutableSet.of(REP_ACCESS_CONTROLLED_PATH, REP_PRIVILEGE_BITS, REP_IS_ALLOW);
+    Set<String> PERMISSION_NODETYPE_NAMES = Set.of(NT_REP_PERMISSIONS, NT_REP_PERMISSION_STORE);
+    Set<String> PERMISSION_NODE_NAMES = Set.of(REP_PERMISSION_STORE);
+    Set<String> PERMISSION_PROPERTY_NAMES = Set.of(REP_ACCESS_CONTROLLED_PATH, REP_PRIVILEGE_BITS, REP_IS_ALLOW);
 
     /**
      * Configuration parameter to enforce backwards compatible permission
@@ -107,7 +107,7 @@ public interface PermissionConstants {
      *
      * @since OAK 1.0
      */
-    Set<String> DEFAULT_READ_PATHS = ImmutableSet.of(
+    Set<String> DEFAULT_READ_PATHS = Set.of(
             NamespaceConstants.NAMESPACES_PATH,
             NodeTypeConstants.NODE_TYPES_PATH,
             PrivilegeConstants.PRIVILEGES_PATH
